# ComputerGraphicsFinalProject

./: .gitignore  CMakeLists.txt
FinalProject/: CityManager.cpp  CityManager.h  FoxManager.cpp  FoxManager.h  TerrainManager.cpp  TerrainManager.h  animation.cpp  animation.h  box.cpp  box.h  city.cpp  city.h  model.cpp  model.h  scene.cpp  sky.cpp  sky.h  terrain.cpp  terrain.h  utils.cpp  utils.h
FinalProject/assets/model/city/: city_LOD0.gltf  city_LOD1.gltf  city_LOD2.gltf
FinalProject/assets/model/fox/: fox.gltf
FinalProject/assets/model/hull/: hull_LOD0.gltf  hull_LOD1.gltf  hull_LOD2.gltf
FinalProject/shader/: bot.frag  bot.vert  box.frag  box.vert  depth.vert  model.frag  model.vert  terrain.frag  terrain.vert
